# Kyber-Dilithium

./: CMakeLists.txt  README.md  main.cpp  note.md  setup.py  setup.sh
Kyber_Dilithium/: Dilithium.pyx  Dilithiumutils.pxd  Dilithiumutils.pyx  Kyber.pyx  Kyberutils.pxd  Kyberutils.pyx  decl.pxd  polynomial.pxd  polynomial.pyx  polyvec.pyx  temp.ipynb
Kyber_Dilithium/poly/: decl.pxd  polynomial.pxd  polynomial.pyx  polyvec.pxd  polyvec.pyx
kernel/: CMakeLists.txt
kernel/poly/: CMakeLists.txt  Dilithiumpoly.cpp  Dilithiumpoly.h  Kyberpoly.cpp  Kyberpoly.h  debug.h  poly.cpp  poly.h  reduce.h  reduce_impl.h
kernel/vec/: CMakeLists.txt  polymat.h  polymat_impl.h  polyvec.h  polyvec_impl.h
poly/: CMakeLists.txt  Dilithiumpoly.cpp  Dilithiumpoly.h  debug.h  kyberpoly.cpp  kyberpoly.h  poly.cpp  poly.h  reduce.h  reduce_impl.h
pre_compute/: nttdata.py
test/: CMakeLists.txt  Dilithium_test.py  Kyber_test.py  dilithium_test.cpp  kyber_test.cpp  polymat_test.cpp  polyvec_test.cpp  test.py  test_poly.py  test_vec.py  testpy.py
